# selenite-kwin-decoration

./: CMakeLists.txt  README.md
src/: BoxShadowHelper.cc  BoxShadowHelper.h  CMakeLists.txt  CloseButton.cc  CloseButton.h  Decoration.cc  Decoration.h  DecorationMagicButtonGroup.cc  DecorationMagicButtonGroup.h  DecorationMagicButtonGroup_p.h  MaximizeButton.cc  MaximizeButton.h  MinimizeButton.cc  MinimizeButton.h  fluent.json  plugin.cc
